tests/error/invalid_global_file.gw
#! [contains] 'global' can only be used at file scope
{
global int i;
}
